- Move maven-surefire-plugin adn maven-failsafe-plugin the top-level   (with only a small number of exceptions). - Cleanup a few tests that failed due to the changes (test interdependency,   dependency on opennms.home setting, not cleanly initializing configs, etc.). - Timezone cleanups in a few tests that didn't work outside of US/Eastern. - Refactor reusable parts from PollOutagesConfigManager into   AbstractWritableJaxbConfigDao and also create its Castor equivalent. - Moved Abstract*ConfigDao to core/xml. Their tests still exist in their   current places because they test with config classes that aren't in core/xml. - Use the AbstractWritableJaxbConfigDao to cleanup WmiPeerFactory. - Fix some bugs in SnmpPeerFactory due to overuse of static fields.   This class is refactoring opportunity to use AbstractWritableJaxbConfigDao.